<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/EspertoBackground"

    android:gravity="center_horizontal"
    android:weightSum="1"
    tools:context="espertolabs.esperto_ble_watch.RegisterActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        app:cardElevation="@dimen/EspertoCardElevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/include"
                layout="@layout/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/first_name"
                style="@style/EspertoTextBox"
                android:hint="@string/prompt_first_name"
                android:textColor="@color/EspertoTextGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include" />

            <EditText
                android:id="@+id/password"
                style="@style/EspertoTextBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_line"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/lato"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="12dp"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <EditText
                android:id="@+id/username"
                style="@style/EspertoTextBox"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_line"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/lato"
                android:hint="@string/prompt_username"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingBottom="12dp"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name" />

            <EditText
                android:id="@+id/password_dup"
                style="@style/EspertoTextBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"

                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_line"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/lato"
                android:hint="@string/prompt_password_again"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="12dp"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <EditText
                android:id="@+id/last_name"
                style="@style/EspertoTextBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_line"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/lato"
                android:hint="@string/prompt_last_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingBottom="12dp"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name" />

            <Button
                android:id="@+id/register"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:background="@color/EspertoBlue"
                android:onClick="registerUser"
                android:text="@string/prompt_register"
                android:textAppearance="@android:style/TextAppearance.Material.Button"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_dup" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>
