...
    <string name="location_requirec">Location permissions are required for Bluetooth scanning</string>
    <string name="ble_not_supported">Bluetooth LE is not supported on this device</string>
    <string name="watch_disconnected">Esperto Watch disconnected</string>
    <string name="ok">OK</string>

    <!-- Strings related to Register activity-->
    <string name="default_setting">Default Setting</string>
    <string name="goal_setting">Choose Goal Setting</string>

    <!-- Strings related to Summary Activity -->
    <string name="title_heart">Heart Rate</string>
    <string name="title_activity_summary">Esperto Watch</string>
    <string name="title_profile">Summary</string>
...
